<resources>
    <string name="app_name">NotePad</string>
    <string name="title_activity_main">NotePad</string>
    <string name="notes">Notlarım</string>
    <string name="create_note">Not Oluştur</string>
    <string name="custom_notes">Gizli Notlarım</string>
    <string name="select_gallery">Galeriden Seç</string>
    <string name="capture_camera">Kamerayı Aç</string>
    <string name="note_title">Not Başlığı</string>
    <string name="note_description">Not Açıklaması</string>
    <string name="empty_value_error">Lütfen Gerekli Alanları Doldurunuz!</string>
    <string name="enter_pass">Şifrenizi Giriniz</string>
    <string name="create_pass">Şifre Oluşturun</string>
    <string name="ok">Tamam</string>
    <string name="create_and_next">Oluştur ve İlerle</string>
</resources>