<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.task.noteapp.ui.HomeFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_create_note"
        android:name="com.task.noteapp.ui.CreateNoteFragment"
        android:label="@string/create_note"
        tools:layout="@layout/fragment_create_notes" />

    <fragment
        android:id="@+id/navigation_custom_notes"
        android:name="com.task.noteapp.ui.NotificationsFragment"
        android:label="@string/custom_notes"
        tools:layout="@layout/fragment_custom_notes" />
</navigation>