<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.task.noteapp.ui.NoteListFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_create_note"
        android:name="com.task.noteapp.ui.CreateNoteFragment"
        android:label="@string/create_note"
        tools:layout="@layout/fragment_create_notes" >
        <action
            android:id="@+id/action_navigation_create_note_to_navigation_notes"
            app:destination="@id/navigation_notes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_secret_notes"
        android:name="com.task.noteapp.ui.SecretNotesFragment"
        android:label="@string/custom_notes"
        tools:layout="@layout/fragment_secret_notes" />

    <fragment
        android:id="@+id/navigation_custom_notes"
        android:name="com.task.noteapp.ui.LoginFragment"
        android:label="Login Fragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_custom_notes_to_navigation_secret_notes"
            app:destination="@id/navigation_secret_notes" />
    </fragment>
</navigation>